--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,81 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #F3F4F5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: black;
+}
+
+.input{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 10px;
+  width: 600px;
+}
+.input p{
+  font-size: 25px;
+  font-weight: bold;
+  margin: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.input .prompt{
+  margin: 20px;
+  width: 80%;
+  height: 50px;
+  border-radius: 9px;
+  background-color: #E2E8F0;
+
+}
+
+.input .textArea{
+  margin: 20px;
+  width: 80%;
+  height: 200px;
+  border-radius: 9px;
+  background-color: #E2E8F0;
+  font-family: 'arial';
+  padding: 4px;
+}
+
+
+.Response{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 10px;
+  width: 600px;
+  margin-top: 20px;
+}
+.Response button{
+  margin: 20px;
+  padding: 10px 12px;
+  border-radius: 6px;
+  background-color: #BBE6E4;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+}
+
+.Response button:hover{
+  background-color: #85bdf8;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Response p{
+  font-size: 25px;
+  font-weight: bold;
+  margin: 20px;
+  font-family: 'Arial Narrow', Arial, sans-serif; 
 }
